llama-cpp-python specified to 0.2.26, latest (0.2.60) results in inconsistent and poor quality output

--- a/concept_tests/noah_guidance.ipynb
+++ b/concept_tests/noah_guidance.ipynb
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +403,8 @@
     "from guidance import models, gen, select\n",
     "import json\n",
     "\n",
-    "lm = guidance.models.LlamaCpp(model=\"/mnt/e/models/llama/TheBloke/mistral-7b-instruct-v0.2.Q6_K.gguf\", n_gpu_layers=-1,  n_ctx=0, echo=False) # default n_ctx is 512 seems like.... max is 16384"
+    "#lm = guidance.models.LlamaCpp(model=\"/mnt/e/models/llama/TheBloke/mistral-7b-instruct-v0.2.Q6_K.gguf\", n_gpu_layers=-1,  n_ctx=0, echo=False) # default n_ctx is 512 seems like.... max is 16384\n",
+    "lm = guidance.models.LlamaCpp(model=\"/home/dorota/models/mistral-7b-instruct-v0.2.Q6_K.gguf\", n_gpu_layers=-1, n_ctx=0, echo=False) # default n_ctx=512 (max is 16384), echo=False -> no generation output displayed"
    ]
   },
   {
@@ -606,13 +607,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pypdf import PdfReader \n",
     "  \n",
-    "reader = PdfReader('40001_2023_Article_1364.pdf') \n",
+    "reader = PdfReader(\"/home/dorota/LLM-diploma-project/00_concept_tests/data/40001_2023_Article_1364.pdf\") \n",
     "num_pages = len(reader.pages)\n",
     "TEXT = \"\"\n",
     "for page_num in range(1): #TODO: change to range(num_pages) for whole document\n",
@@ -622,9 +623,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      {\n",
+      "        \"title\" : \"../../../Articles/2023/Xu_et_al_-_Visualization_of_breast_cancer_related_protein_synthesis_from_the_perspective_of_bibliometric_analysis.pdf\",\n",
+      "        \"authors\" : \"\",\n",
+      "        \"publication_year\": \"2023\",\n",
+      "        \"key_words\" : \"\",\n",
+      "        \"summary\" : \"'Breast cancer' is the most common cancer in women worldwide and the number of patients increased year by year. The most common risk factors for breast cancer include age, gender, inherited risk of breast cancer, reproductive history, and exposure to certain chemicals and radiation. One of the key factors in the development and progression of breast cancer is the overexpression of certain proteins. In this article, the authors conducted a bibliometric analysis of the literature on breast cancer and protein synthesis, aiming to provide crucial insights into this esoteric realm of investigation. They scoured the Web of Science database between 2003 and 2022 for articles containing the keywords ‘breast cancer’ and ‘protein synthesis’ in their title, abstract, or keywords. They deployed bibliometric analysis software, exploring a range of measures such as publication output, citation counts, co-citation analysis, and keyword analysis. Their search yielded 2998 articles that met their inclusion criteria. The number of publications in this area has steadily increased, with a significant rise observed after 2003. Most of the articles were published in oncology or biology-related journals, with the most publications in Journal of Biological Chemistry, Cancer Research, Proceedings of the National Academy of Sciences of the United States of America, and Oncogene. Keyword analysis revealed that ‘breast cancer,’ ‘expression,’ ‘cancer,’ ‘protein,’ and ‘translation’ were the most commonly researched topics. In conclusion, the authors' bibliometric analysis of breast cancer and related protein synthesis literature underscores the burgeoning interest in this research. The focus of the research is primarily on the relationship between protein expression in breast cancer and the development and treatment of tumors.\",\n",
+      "        \"research_area\" : \"; Biology; ; Cancer; ; Oncology; ; Protein synthesis\",\n",
+      "        \"quality_score\" : \"BAD\",\n",
+      "        \"quality_reason\" : \"{ \\\"\n",
+      "      }\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "@guidance\n",
     "def get_metadata(lm, text):\n",
@@ -681,7 +700,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
