--- a/concept_tests/guidance.ipynb
+++ b/concept_tests/guidance.ipynb
@@ -5,8 +5,9 @@
    "metadata": {},
    "source": [
     "# Exploration of {Guidance}:\n",
-    "* Llama-index guidance pydantic program\n",
-    "* Microsoft guidance"
+    "* Llama-index guidance pydantic program tutorial\n",
+    "* Microsoft guidance tutorials\n",
+    "* POC to extract information from structured text, news article and scientrific article into structured output (json)"
    ]
   },
   {
@@ -16,9 +17,8 @@
     "---\n",
     "CONCLUSIONS:\n",
     "* Llama-index guidance pydantic program dicarded due to LLM not outputting correct json schema even with mixtral. # -> OutputParserException: Failed to parse pydantic object from guidance program. Probably the LLM failed to produce data with right json schema\n",
-    "* Native guidance with mistral_Q6 unstable output especially with lists - probably due to quantatization of model.\n",
-    "* Extract data to json works well for select from a list of choices and generation\n",
-    "* Content of the generated output from longer text or scientific article varies. Output an be improved with prompting: propmpt engineering, chain-of-thought, few-shot examples\n",
+    "* Extract data to json works well for select from a list of choices and generation funcion with llama-cpp-python==0.2.26\n",
+    "* Content of the generated output from longer text or scientific article good quality. Not all instructions in prompt are followed. Output can possibly be improved with prompting: propmpt engineering, chain-of-thought, few-shot examples.\n",
     "---"
    ]
   },
@@ -157,7 +157,7 @@
     "Q: Who won the last Kentucky derby and by how much?\n",
     "A:''' + gen(stop=\"Q:\")\n",
     "\n",
-    "# -> expected answer most of the time"
+    "# -> expected answer"
    ]
   },
   {
@@ -256,26 +256,9 @@
     "if lm[\"choice\"] == \"SEARCH\":\n",
     "    lm += \"Here are 3 search queries:\\n\"\n",
     "    for i in range(3):\n",
-    "        lm += f'''{i+1}. \"{gen(stop='\"', name=\"queries\", temperature=1.0, list_append=True)}\"\\n'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# https://github.com/guidance-ai/guidance?tab=readme-ov-file#guidance-acceleration\n",
+    "        lm += f'''{i+1}. \"{gen(stop='\"', name=\"queries\", temperature=1.0, list_append=True)}\"\\n'''\n",
     "\n",
-    "from guidance import substring\n",
-    "\n",
-    "# define a set of possible statements\n",
-    "text = 'guidance is awesome. guidance is so great. guidance is the best thing since sliced bread.'\n",
-    "\n",
-    "# force the model to make an exact quote\n",
-    "mistral + f'Here is a true statement about the guidance library: \"{substring(text)}\"'\n",
-    "\n",
-    "# -> not substring is selected"
+    "# Native guidance with mistral_Q6 issues with lists probably due to quantatization of model."
    ]
   },
   {
@@ -379,6 +362,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "---\n",
     "## POC extract data -> json"
    ]
