added poc for prompting lm/guidance via pydantic class and save output to same pydantic class

--- a/concept_tests/guidance.ipynb
+++ b/concept_tests/guidance.ipynb
@@ -600,7 +600,14 @@
     "        \"summary\" : \"{generation[\"summary\"]}\",\n",
     "      }}\n",
     "''')\n",
-    "\n"
+    "\n",
+    "# Output:\n",
+    "      # {\n",
+    "      #   \"title\" : \"Woman Charged with Multiple Marriages in Immigration Scam\",\n",
+    "      #   \"summary\" : \"Liana Barrientos, 39, of New York, is facing criminal charges for falsifying marriage license applications during a series of 10 marriages between 1999 and 2010. Prosecutors believe the marriages were part of an immigration scam, with some husbands filing for permanent residence status shortly after the weddings. Barrientos is currently charged with two counts of offering a false instrument for filing and faces up to four years in prison if convicted. Seven of her husbands are from 'red-flagged' countries and one was deported in 2006.\",\n",
+    "      # }\n",
+    "\n",
+    "# -> correct output\n"
    ]
   },
   {
@@ -621,7 +628,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### pdf article as input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import guidance\n",
+    "from guidance import models, gen, select\n",
+    "import json\n",
+    "\n",
+    "lm = guidance.models.LlamaCpp(\"/home/dorota/models/mistral-7b-instruct-v0.2.Q6_K.gguf\", n_gpu_layers=-1, n_ctx=0, echo=False)"
    ]
   },
   {
@@ -638,6 +666,13 @@
     "for page_num in range(1): #change to range(num_pages) for whole document\n",
     "    page = reader.pages[page_num]  \n",
     "    TEXT += page.extract_text()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Promting tests"
    ]
   },
   {
@@ -681,7 +716,244 @@
     "        \"quality_score\" : \"{generation[\"quality\"]}\",\n",
     "        \"quality_reason\" : \"{generation[\"quality_reason\"]}\"\n",
     "      }}\n",
-    "''')\n"
+    "''')\n",
+    "\n",
+    "# Output:\n",
+    "      # {\n",
+    "      #   \"title\" : \"Visualization of breast cancer -related protein synthesis from the perspective of bibliometric analysis\",\n",
+    "      #   \"authors\" : \"Jiawei Xu, Chengdong Yu, Xiaoqiang Zeng, Weifeng Tang, Siyi Xu, Lei Tang, Yanxiao Huang, Zhengkui Sun, Tenghua Yu\",\n",
+    "      #   \"publication_year\": \"2023\",\n",
+    "      #   \"key_words\" : \"Breast cancer, Bibliometric analysis, Protein synthesis\",\n",
+    "      #   \"summary\" : \"This article provides insights into the research on breast cancer and protein synthesis by conducting a bibliometric analysis of articles published between 2003 and 2022 in the Web of Science database. The analysis reveals a steady increase in publications, with most articles published in oncology or biology-related journals. Keyword analysis identified 'breast cancer,' 'expression,' 'cancer,' 'protein,' and 'translation' as the most commonly researched topics. The research focuses on the relationship between protein expression in breast cancer and tumor development and treatment.\",\n",
+    "      #   \"research_area\" : \"Breast cancer research, Protein synthesis, Bibliometric analysis\",\n",
+    "      #   \"quality_score\" : \"BAD\",\n",
+    "      #   \"quality_reason\" : \"The article is a review and does not contain original research data or findings.\"\n",
+    "      # }\n",
+    "\n",
+    "# -> all outputs ok except for key_words which should be 5 and generated from abstract. intead the model picks the 3 listed key_words with slight but logical modification."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@guidance\n",
+    "def get_metadata(lm, text):\n",
+    "    lm += f'''\\\n",
+    "    Article is delimited by (start) and (stop):\n",
+    "    (start)\n",
+    "    {text}\n",
+    "    (stop)\n",
+    "\n",
+    "    JSON ouput:\n",
+    "    {{\n",
+    "        \"extract title from article\" : \"{gen(name=\"title\", stop='\"')}\",\n",
+    "        \"extract authors from article\" : \"{gen(name=\"authors\", stop='\"')}\",\n",
+    "        \"publication_year\": {gen(\"publication_year\", regex=\"[0-9]+\")},\n",
+    "        \"generate 5 new key words based on content in Abstract\" : \"{gen(name=\"key_words\", stop='\"')}\",\n",
+    "        \"generate summary in 3 sentences\" : \"{gen(name=\"summary\", stop='\"')}\",\n",
+    "        \"generate 1 main research area\" : \"{gen(name=\"research_area\", stop='\"')}\",\n",
+    "        \"quality_score\" : \"{select(options=['GOOD', 'BAD', 'EXCELLENT', 'CAN NOT SET SCORE'], name=\"quality\")}\",\n",
+    "        \"describe reason for chosen quality_score in 1 sentece\" : \"{gen(name=\"quality_reason\", stop='\"')}\"\n",
+    "    }}'''\n",
+    "    return lm\n",
+    "\n",
+    "generation = lm + get_metadata(TEXT)\n",
+    "\n",
+    "print(f'''\\\n",
+    "      {{\n",
+    "        \"title\" : \"{generation[\"title\"]}\",\n",
+    "        \"authors\" : \"{generation[\"authors\"]}\",\n",
+    "        \"publication_year\": \"{generation[\"publication_year\"]}\",\n",
+    "        \"key_words\" : \"{generation[\"key_words\"]}\",\n",
+    "        \"summary\" : \"{generation[\"summary\"]}\",\n",
+    "        \"research_area\" : \"{generation[\"research_area\"]}\",\n",
+    "        \"quality_score\" : \"{generation[\"quality\"]}\",\n",
+    "        \"quality_reason\" : \"{generation[\"quality_reason\"]}\"\n",
+    "      }}\n",
+    "''')\n",
+    "\n",
+    "\n",
+    "# Output:\n",
+    "        # {\n",
+    "        # \"title\" : \"Visualization of breast cancer -related protein synthesis from the perspective of bibliometric analysis\",\n",
+    "        # \"authors\" : \"Jiawei Xu, Chengdong Yu, Xiaoqiang Zeng, Weifeng Tang, Siyi Xu, Lei Tang, Yanxiao Huang, Zhengkui Sun, Tenghua Yu\",\n",
+    "        # \"publication_year\": \"2023\",\n",
+    "        # \"key_words\" : \"Breast cancer research, Protein synthesis analysis, Bibliometric analysis, Cancer diagnosis, Therapy development\",\n",
+    "        # \"summary\" : \"This article presents a bibliometric analysis of research on breast cancer and protein synthesis, revealing a growing interest in the relationship between protein expression and breast cancer development and treatment. The research has been instrumental in breast cancer diagnosis and therapy development. Continued research in this area will provide valuable insights into breast cancer biology and the creation of innovative therapies.\",\n",
+    "        # \"research_area\" : \"Breast cancer research and protein synthesis analysis\",\n",
+    "        # \"quality_score\" : \"BAD\",\n",
+    "        # \"quality_reason\" : \"The article lacks novelty and does not provide significant new insights or findings in the field of breast cancer research and protein synthesis analysis.\"\n",
+    "        # }\n",
+    "\n",
+    "# -> perfect output according to instructions when instructions are given as keys for each field to genereate for the model\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Prompting from Pydantic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pydantic import BaseModel, Field\n",
+    "from typing import List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NodeMetadata(BaseModel):\n",
+    "    title: str = Field(..., description=\"extract title from article\")\n",
+    "    authors: str = Field(..., description=\"extract authors from article\")\n",
+    "    pub_year: int = Field(..., description=\"extract publication year\")\n",
+    "    key_words: str = Field(..., description=\"generate 5 new key words based on content in Abstract\")\n",
+    "    summary: str = Field(..., description=\"generate summary in 3 sentences\")\n",
+    "    research_area: str = Field(..., description=\"generate 1 main research area described in article\")\n",
+    "    quality: str = Field(..., description=\"select one value from provided examples to define quality of article\", examples=['GOOD', 'BAD', 'EXCELLENT', 'CAN NOT SET QUALITY'])\n",
+    "    quality_reason: str = Field(..., description=\"describe reason for chosen quality_score in 1 sentece\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NodeMetadata.model_fields"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@guidance\n",
+    "def get_metadata(lm, text, pydantic_class):\n",
+    "    lm += f'''\\\n",
+    "    Article is delimited by (start) and (stop):\n",
+    "    (start)\n",
+    "    {text}\n",
+    "    (stop)\n",
+    "\n",
+    "    JSON ouput: {{'''\n",
+    "\n",
+    "    for key, value in pydantic_class.model_fields.items():\n",
+    "        if value.examples:\n",
+    "            lm += '\"' + value.description + \" \" + ', '.join(value.examples) + '\": \"' + select(options=value.examples, name=key) + '\",'\n",
+    "        elif value.annotation == str:\n",
+    "            lm += '\"' + value.description + '\": \"' + gen(name=key, stop='\"') + '\",'\n",
+    "        elif value.annotation == int:\n",
+    "            lm += '\"' + value.description + '\": \"' + gen(name=key, regex=\"[0-9]+\") + '\",'\n",
+    "    lm += '}'\n",
+    "    return lm\n",
+    "\n",
+    "generation = lm + get_metadata(TEXT, NodeMetadata)\n",
+    "\n",
+    "print(f'''\\\n",
+    "      {{\n",
+    "        \"title\" : \"{generation[\"title\"]}\",\n",
+    "        \"authors\" : \"{generation[\"authors\"]}\",\n",
+    "        \"publication_year\": \"{generation[\"pub_year\"]}\",\n",
+    "        \"key_words\" : \"{generation[\"key_words\"]}\",\n",
+    "        \"summary\" : \"{generation[\"summary\"]}\",\n",
+    "        \"research_area\" : \"{generation[\"research_area\"]}\",\n",
+    "        \"quality_score\" : \"{generation[\"quality\"]}\",\n",
+    "        \"quality_reason\" : \"{generation[\"quality_reason\"]}\"\n",
+    "      }}\n",
+    "''')\n",
+    "\n",
+    "# Output as json:\n",
+    "# {\n",
+    "#         \"title\" : \"Visualization of breast cancer -related protein synthesis from the perspective of bibliometric analysis\",\n",
+    "#         \"authors\" : \"Jiawei Xu, Chengdong Yu, Xiaoqiang Zeng, Weifeng Tang, Siyi Xu, Lei Tang, Yanxiao Huang, Zhengkui Sun, Tenghua Yu\",\n",
+    "#         \"publication_year\": \"2023\",\n",
+    "#         \"key_words\" : \"Breast cancer research, Protein synthesis analysis, Bibliometric analysis, Cancer diagnosis, Therapy development\",\n",
+    "#         \"summary\" : \"This article presents a bibliometric analysis of research on breast cancer and protein synthesis, revealing a growing interest in the relationship between protein expression and breast cancer development and treatment. The study found that most publications were in oncology or biology-related journals, with the most articles published in Journal of Biological Chemistry, Cancer Research, Proceedings of the National Academy of Sciences of the United States of America, and Oncogene. Keyword analysis showed that 'breast cancer', 'expression', 'cancer', 'protein', and 'translation' were the most commonly researched topics.\",\n",
+    "#         \"research_area\" : \"Breast cancer research, specifically the relationship between protein expression and breast cancer development and treatment, is a growing area of interest in the scientific community.\",\n",
+    "#         \"quality_score\" : \"GOOD\",\n",
+    "#         \"quality_reason\" : \"The article provides a comprehensive bibliometric analysis of research on breast cancer and protein synthesis, using reliable data sources and rigorous analysis methods.\"\n",
+    "#       }\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@guidance\n",
+    "def get_metadata(lm, text, pydantic_class):\n",
+    "    lm += f'''\\\n",
+    "    Article is delimited by (start) and (stop):\n",
+    "    (start)\n",
+    "    {text}\n",
+    "    (stop)\n",
+    "\n",
+    "    JSON ouput: {{'''\n",
+    "\n",
+    "    for key, value in pydantic_class.model_fields.items():\n",
+    "        if value.examples:\n",
+    "            lm += '\"' + value.description + \" \" + ', '.join(value.examples) + '\": \"' + select(options=value.examples, name=key) + '\",'\n",
+    "        elif value.annotation == str:\n",
+    "            lm += '\"' + value.description + '\": \"' + gen(name=key, stop='\"') + '\",'\n",
+    "        elif value.annotation == int:\n",
+    "            lm += '\"' + value.description + '\": \"' + gen(name=key, regex=\"[0-9]+\") + '\",'\n",
+    "    lm += '}'\n",
+    "    return lm\n",
+    "\n",
+    "def output_to_pydantic(pydantic_class, output):\n",
+    "    '''Transorms output from lm/guidance -> dict -> original pydantic model'''\n",
+    "    metadata_dict = {}\n",
+    "    for key in pydantic_class.model_fields.keys():\n",
+    "        metadata_dict[key] = output[key]\n",
+    "\n",
+    "    output_pydantic_model = pydantic_class(**metadata_dict)\n",
+    "    return output_pydantic_model\n",
+    "\n",
+    "\n",
+    "model_output = lm + get_metadata(TEXT, NodeMetadata)\n",
+    "output_to_pydantic(NodeMetadata, model_output).model_dump() # model_dump() for visualization\n",
+    "\n",
+    "# Output in pydantic in accordance to the query pydantic model: \n",
+    "# {'title': 'Visualization of breast cancer -related protein synthesis from the perspective of bibliometric analysis',\n",
+    "#  'authors': 'Jiawei Xu, Chengdong Yu, Xiaoqiang Zeng, Weifeng Tang, Siyi Xu, Lei Tang, Yanxiao Huang, Zhengkui Sun, Tenghua Yu',\n",
+    "#  'pub_year': 2023,\n",
+    "#  'key_words': 'Breast cancer research, Protein synthesis analysis, Bibliometric analysis, Cancer diagnosis, Therapy development',\n",
+    "#  'summary': \"This article presents a bibliometric analysis of research on breast cancer and protein synthesis, revealing a growing interest in the relationship between protein expression and breast cancer development and treatment. The study found that most publications were in oncology or biology-related journals, with the most articles published in Journal of Biological Chemistry, Cancer Research, Proceedings of the National Academy of Sciences of the United States of America, and Oncogene. Keyword analysis showed that 'breast cancer', 'expression', 'cancer', 'protein', and 'translation' were the most commonly researched topics.\",\n",
+    "#  'research_area': 'Breast cancer research, specifically the relationship between protein expression and breast cancer development and treatment, is a growing area of interest in the scientific community.',\n",
+    "#  'quality': 'GOOD',\n",
+    "#  'quality_reason': 'The article provides a comprehensive bibliometric analysis of research on breast cancer and protein synthesis, using reliable data sources and rigorous analysis methods.'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# example to generate Pydantic model on the fly based on fields in a dict\n",
+    "from pydantic import create_model\n",
+    "\n",
+    "metadata_dict = {}\n",
+    "for key in NodeMetadata.model_fields.keys():\n",
+    "    metadata_dict[key] = output[key]\n",
+    "\n",
+    "DynamicUser = create_model('NodeMetadata_generated', **{k: (type(v), ...) for k, v in metadata_dict.items()})\n",
+    "output_model_generated = DynamicUser(**metadata_dict)\n",
+    "print(type(output_model_generated))"
    ]
   }
  ],
