added whitespace_pattern= and max_tokens=5000 to be able to run mistral-7b-instruct-v0.2.Q6_K.gguf

--- a/concept_tests/outlines.ipynb
+++ b/concept_tests/outlines.ipynb
@@ -19,8 +19,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "content\n",
-    "conclusions\n",
+    "# content\n",
+    "\n",
+    "* model is mistral-7b-instruct-v0.2.Q6_K.gguf\n",
+    "* model_mistral is mistralai/Mistral-7B-v0.1 \n",
+    "\n",
+    "NOTE: for correct generation with mistral-7b-instruct-v0.2.Q6_K.gguf need:\n",
+    "* in generate.json(whitespace_pattern=\"\") - to help smaller LLMs\n",
+    "* in generator(max_tokens=1000) - so json is not intrupted before fully generated\n",
+    "\n",
+    "# conclusions\n",
     "---\n",
     "---\n"
    ]
@@ -70,50 +78,46 @@
     }
    ],
    "source": [
-    "model_mistral = models.transformers(\"mistralai/Mistral-7B-v0.1\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "########## försöker få över modellen till GPU?????????????????????????????????????\n",
-    "import torch\n",
-    "model_mistral_quant = models.transformers(\"mistralai/Mistral-7B-v0.1\",\n",
-    "                                    device='cuda', ############### CUDA out of memory error\n",
-    "                                    model_kwargs={\"torch_dtype\": torch.float16,\n",
-    "                                                    \"quantization_config\": {\"load_in_4bit\": True}})\n",
+    "model_mistral = models.transformers(\"mistralai/Mistral-7B-v0.1\") # device='cuda'\n",
     "\n",
-    "# pip install accelerate\n",
-    "# pip install bitsandbytes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "????????? output ok if age: int is removed or if code run with mistralai/Mistral-7B-v0.1???????????"
+    "#TODO: how to run on GPU???????"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dorota/LLM-diploma-project/venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "first_name='`Jane`' last_name='`Doe`' id=123\n"
+     ]
+    }
+   ],
    "source": [
+    "\n",
+    "\n",
     "from pydantic import BaseModel, Field\n",
     "class User(BaseModel):\n",
     "    first_name: str\n",
     "    last_name: str\n",
-    "    # age: int\n",
+    "    id: int\n",
     "\n",
-    "generator = generate.json(model, User)\n",
+    "generator = generate.json(model, User, whitespace_pattern=\"\")\n",
     "\n",
     "result = generator(\n",
     "    \"\"\"Based on user information create a user profile with the fields first_name, last_name.\n",
-    "    User information is: Jane Doe 10\"\"\"\n",
+    "    User information is: Jane Doe 123\"\"\", max_tokens=1000\n",
     ")\n",
     "\n",
     "print(result)"
@@ -154,19 +158,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Below can only be run with model_mistral"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "with Pydantic and own text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,16 +172,34 @@
     "reader = PdfReader('/home/dorota/LLM-diploma-project/00_concept_tests/data/40001_2023_Article_1364.pdf') \n",
     "num_pages = len(reader.pages)\n",
     "TEXT = \"\"\n",
-    "for page_num in range(1): #change to range(num_pages) for whole document\n",
+    "for page_num in range(num_pages): #change to range(num_pages) for whole document\n",
     "    page = reader.pages[page_num]  \n",
     "    TEXT += page.extract_text()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'title': '',\n",
+       " 'authors': '',\n",
+       " 'pub_year': 2015,\n",
+       " 'key_words': '',\n",
+       " 'summary': '',\n",
+       " 'research_area': '',\n",
+       " 'quality': 'A',\n",
+       " 'quality_reason': 'Well-written, logically organized, and the data is supportable and presented adequately. The article also includes a substantial new contribution to the field. '}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from pydantic import BaseModel, Field\n",
     "from typing import List\n",
@@ -199,7 +214,7 @@
     "    quality: str = Field(..., description=\"select one value from provided examples to define quality of article\", examples=['GOOD', 'BAD', 'EXCELLENT', 'CAN NOT SET QUALITY'])\n",
     "    quality_reason: str = Field(..., description=\"describe reason for chosen quality_score in 1 sentece\")\n",
     "\n",
-    "generator = generate.json(model_mistral, Metadata)\n",
+    "generator = generate.json(model, Metadata, whitespace_pattern=\"\")\n",
     "prompt = \"\"\"\n",
     "                Article is delimited by (start) and (stop):\n",
     "                (start)\n",
@@ -208,11 +223,12 @@
     "                Generate output based on the Article corresponding to the Metadata class\n",
     "                \"\"\"\n",
     "                \n",
-    "result = generator(prompt)\n",
+    "result = generator(prompt, max_tokens=5000)\n",
     "\n",
     "dict(result)\n",
     "\n",
     "#---------------------------------------------------------------------------------\n",
+    "# with model_mistral\n",
     "# NOTE output has correc headings but content is not based on article provided\n",
     "# {'title': 'Document title',\n",
     " #'authors': 'John J. Nixon, John W. Inplace,David R. None, and Stephen M. S. oninc',\n",
@@ -221,7 +237,19 @@
     " #'summary': 'This is a rjohnsntroducttory document how to use and develop OpenCadflow environment',\n",
     " #'research_area': 'science.agriculture',\n",
     " #'quality': 'submitted_document',\n",
-    " #'quality_reason': 'Copy from other publications without changes'}"
+    " #'quality_reason': 'Copy from other publications without changes'}\n",
+    "\n",
+    " #--------------------------------------------------------------------------------\n",
+    " # with model\n",
+    " #{'title': '',\n",
+    " #'authors': '',\n",
+    " #'pub_year': 2000,\n",
+    " #'key_words': '',\n",
+    " #'summary': '',\n",
+    " #'research_area': '',\n",
+    " #'quality': '',\n",
+    " #'quality_reason': ''}\n",
+    " "
    ]
   },
   {
@@ -233,9 +261,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'title': ': ',\n",
+       " 'authors': ': [',\n",
+       " 'pub_year': 2023,\n",
+       " 'key_words': ', breast cancer, bibliometric analysis, protein synthesis, breast cancer-related protein synthesis',\n",
+       " 'summary': ': This study conducted a bibliometric analysis of breast cancer-related protein synthesis literature from 2003 to 2022 using data obtained from the Web of Science Core Collection. The analysis revealed an increasing trend in the number of publications over time, with the majority being published in oncology or biology-related journals. The most influential journals included the Journal of Biological Chemistry, Cancer Research, and Proceedings of the National Academy of Sciences of the United States of America. Significant authors and collaborative networks were identified, and keywords identified the main research areas of breast cancer, protein synthesis, and breast cancer-related protein synthesis.',\n",
+       " 'research_area': ': Breast cancer-related protein synthesis',\n",
+       " 'quality': ': EXCELLENT',\n",
+       " 'quality_reason': ': The article provides a clear and detailed analysis of breast cancer-related protein synthesis literature using bibliometric tools and techniques, resulting in valuable insights for researchers and clinical practitioners in the field.'}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import outlines\n",
     "import outlines.generate\n",
@@ -270,13 +316,13 @@
     "    quality_reason: description=\"describe reason for chosen quality_score in 1 sentece\"\n",
     "    \"\"\"\n",
     "prompt = get_metadata(TEXT)\n",
-    "generator = outlines.generate.json(model_mistral, Metadata)\n",
-    "result = generator(prompt)\n",
+    "generator = outlines.generate.json(model, Metadata, whitespace_pattern=\"\")\n",
+    "result = generator(prompt, max_tokens=5000)\n",
     "\n",
     "result.model_dump()\n",
     "\n",
     "#------------------------------------------------------------------------------------------------------------------------------\n",
-    "# NOTE good quality output\n",
+    "# NOTE with model_mistral good quality output (just 1st page used)\n",
     "#{'title': 'Visualization of breast cancer-related protein synthesis from  the perspective   of bibliometric analysis ',\n",
     "# 'authors': 'Jiawei Xu, Chengdong Yu, Xiaoqiang Zeng, Weifeng Tang, Siyi Xu, Lei Tang, Yanxiao Huang, Zhengkui Sun , Tenghua Yu*',\n",
     "# 'pub_year': 2023,\n",
@@ -284,7 +330,29 @@
     "# 'summary': 'The Our analysis of the relationship between protein expression in breast cancer and the  development and  treatment of tumors.',\n",
     "# 'research_area': 'oncology, hematology',\n",
     "# 'quality': 'EXCELLENT',\n",
-    "# 'quality_reason': 'Presentation of content is good. '}"
+    "# 'quality_reason': 'Presentation of content is good. '}\n",
+    "\n",
+    "#----------------------------------------------------------------------------------------------------------------------------\n",
+    "# NOTE with model partially satisfactory output (10s, just 1st page used)\n",
+    "#{'title': ': ',\n",
+    "# 'authors': ': [{',\n",
+    "# 'pub_year': 2023,\n",
+    "# 'key_words': ': [',\n",
+    "# 'summary': ': This article presents a bibliometric analysis of the literature on breast cancer and protein synthesis, uncovering trends and key topics in the field. The research reveals the burgeoning interest in understanding the relationship between protein expression and breast cancer development and treatment. Key findings include the increase in publications since 2003 and the dominance of research in oncology and biology journals.',\n",
+    "# 'research_area': ': Breast cancer and protein synthesis bibliometrics',\n",
+    "# 'quality': ': GOOD',\n",
+    "# 'quality_reason': ': Detailed analysis and well-written'}\n",
+    "\n",
+    "#----------------------------------------------------------------------------------------------------------------------------\n",
+    "# NOTE with model partially satisfactory output (2 min for whole article)\n",
+    "#{'title': ': ',\n",
+    "# 'authors': ': [',\n",
+    "# 'pub_year': 2023,\n",
+    "# 'key_words': ', breast cancer, bibliometric analysis, protein synthesis, breast cancer-related protein synthesis',\n",
+    "# 'summary': ': This study conducted a bibliometric analysis of breast cancer-related protein synthesis literature from 2003 to 2022 using data obtained from the Web of Science Core Collection. The analysis revealed an increasing trend in the number of publications over time, with the majority being published in oncology or biology-related journals. The most influential journals included the Journal of Biological Chemistry, Cancer Research, and Proceedings of the National Academy of Sciences of the United States of America. Significant authors and collaborative networks were identified, and keywords identified the main research areas of breast cancer, protein synthesis, and breast cancer-related protein synthesis.',\n",
+    "# 'research_area': ': Breast cancer-related protein synthesis',\n",
+    "# 'quality': ': EXCELLENT',\n",
+    "# 'quality_reason': ': The article provides a clear and detailed analysis of breast cancer-related protein synthesis literature using bibliometric tools and techniques, resulting in valuable insights for researchers and clinical practitioners in the field.'}"
    ]
   },
   {
@@ -296,9 +364,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'title': '',\n",
+       " 'authors': '',\n",
+       " 'pub_year': 2023,\n",
+       " 'key_words': '[{\\\\',\n",
+       " 'summary': '',\n",
+       " 'research_area': 'Breast cancer research',\n",
+       " 'quality': 'High',\n",
+       " 'quality_reason': 'Meets all the standards for a high-quality article, including having a clear and concise abstract, using appropriate and relevant research keywords, and reporting accurate and reliable research results'}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# https://outlines-dev.github.io/outlines/reference/prompting/\n",
     "\n",
@@ -330,13 +416,13 @@
     "    \"\"\"\n",
     "\n",
     "prompt = get_metadata(TEXT, Metadata)\n",
-    "generator = outlines.generate.json(model_mistral, Metadata)\n",
-    "result = generator(prompt)\n",
+    "generator = outlines.generate.json(model, Metadata, whitespace_pattern=\"\")\n",
+    "result = generator(prompt, max_tokens=5000)\n",
     "\n",
     "result.model_dump()\n",
     "\n",
     "#---------------------------------------------------------------------------------------------\n",
-    "# TODO NOTE: the output is different ith  {{ pydantic_model | schema }} and manually inserted fields from example above even though printed prompt looks the same\n",
+    "# TODO NOTE: with model_mistral the output is different with  {{ pydantic_model | schema }} and manually inserted fields from example above even though printed prompt looks the same\n",
     "#{'title': 'Breast cancer and protein synthesis from the perspective of bibliometric analysis', # NOTE-> not correct\n",
     "# 'authors': 'Xu, X., Yu, C., Zeng, X., Tang, W., Xu, S., Tang, L., Huang, Y., Sun, Z. and Yu, T.',  # NOTE -> first name intitials only\n",
     "# 'pub_year': 2023,\n",
@@ -346,6 +432,16 @@
     "# 'quality': 'good',\n",
     "# 'quality_reason': 'The article uses a well-established database and is well-written and referenced.'}\n",
     "\n",
+    "#--------------------------------------------------------------------------------------------------\n",
+    "# NOTE: with model partially satisfactory output\n",
+    "#{'title': '',\n",
+    "# 'authors': '',\n",
+    "# 'pub_year': 2023,\n",
+    "# 'key_words': '[{\\\\',\n",
+    "# 'summary': '',\n",
+    "# 'research_area': 'Breast cancer research',\n",
+    "# 'quality': 'High',\n",
+    "# 'quality_reason': 'Meets all the standards for a high-quality article, including having a clear and concise abstract, using appropriate and relevant research keywords, and reporting accurate and reliable research results'}\n",
     "\n",
     "# TODO: detta example med få med examples"
    ]
@@ -356,7 +452,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: lösa Validation error when running above with mistral-7b-instruct-v0.2.Q6_K.gguf alt köra mistral på GPU . hur?????\n",
     "# TODO: result -> pydantic"
    ]
   },
